--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 body {
   font-family: 'Lato', sans-serif;
+  color: #888888;
 }
 
 /* HEADER */
@@ -89,14 +90,107 @@ section .header {
   overflow: hidden;
   width: 100%;
 }
-section .header hr {
+hr {
   width: 100%;
   height: 0;
-  border: 1px solid green;
+  border: 1px solid #707070;
 }
 
 section .header h2 {
   padding: 10px;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* PRODUCT CARD */
+/* PRODUCT CARD */
+/* PRODUCT CARD */
+/* PRODUCT CARD */
+/* PRODUCT CARD */
+/* PRODUCT CARD */
+.cardsDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.productCard {
+  width: 200px;
+  margin-bottom: 40px;
+}
+
+.imageDiv img {
+  min-height: 145px;
+}
+
+.imageDiv {
+  height: 150px;
+  border: 1px solid #707070;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.infoDiv {
+  padding-top: 16px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cardName {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.cardDescription {
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.cardOldPrice {
+  font-size: 12px;
+  margin-bottom: 6px;
+}
+
+.cardPrice {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+
+.cardInst {
+  font-size: 12px;
+  margin-bottom: 6px;
+}
+
+.cardButton {
+  height: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  font-size: 14px;
+  letter-spacing: 0px;
+  color: #888888;
+}
+
+.loadMoreButton {
+  color: #888888;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 40px;
+  width: 260px;
+  background: #ffffff 0% 0% no-repeat padding-box;
 }
 
 /* FOOTER */
