--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-/* * { */
-/* border: 1px solid red; */
-/* } */
+/* * {
+  border: 1px solid red;
+} */
 
 body {
   font-family: 'Lato', sans-serif;
@@ -95,6 +95,7 @@ section .header {
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
+  margin-bottom: 50px;
 }
 hr {
   width: 100%;
@@ -197,8 +198,60 @@ section .header h2 {
   font-size: 16px;
   height: 40px;
   width: 260px;
-  background: #ffffff 0% 0% no-repeat padding-box;
+  background: #ffffff;
   margin: 50px;
+}
+
+/* FORMS */
+/* FORMS */
+/* FORMS */
+/* FORMS */
+/* FORMS */
+/* FORMS */
+
+.sharingForm div {
+  display: flex;
+}
+
+.sharingForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sharingForm p {
+  font-size: 14px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.sharingForm div div {
+  display: flex;
+  flex-direction: column;
+  width: 340px;
+  padding: 20px;
+}
+
+.sharingForm div div label {
+  margin-bottom: 8px;
+  font-size: 12px;
+}
+.sharingForm div div input {
+  font-size: 16px;
+  height: 30px;
+}
+
+.sharingForm input[type='submit'] {
+  color: #888888;
+  border: 1px solid #707070;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 40px;
+  width: 260px;
+  background: #ffffff;
+  margin-top: 40px;
+  margin-bottom: 70px;
 }
 
 /* FOOTER */
@@ -232,6 +285,35 @@ footer p {
 @media (max-width: 1000px) {
   main {
     max-width: 680px;
+  }
+
+  section .header {
+    margin-bottom: 20px;
+    padding: 0;
+  }
+
+  .sharingForm {
+    padding: 10px;
+  }
+  .sharingForm p {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 25px;
+  }
+
+  .sharingForm div {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sharingForm div {
+    width: 100%;
+  }
+
+  .sharingForm div div {
+    padding-right: 0;
+    padding-left: 0;
+    width: 100%;
   }
 }
 
